--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -98,16 +98,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "models_dir='./models'\n",
+    "model_types=['checkpoints', 'clip', 'clip_vision', 'configs', 'controlnet', 'deepbooru', 'diffusers', 'embeddings', 'facerestore_models', 'gligen', 'hypernetworks', 'inpaint', 'karlo', 'loras', 'mmdets', 'onnx', 'photomaker', 'prompt_expansion', 'safety_ckecker', 'sams', 'style_models', 'ultralytics', 'unet', 'upscale_models', 'vae', 'vae_approx']\n",
+    "model_versions=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
     "\n",
-    "def set_model_dir(model_type, model_ver):\n",
-    "    model_root=os.path.join(models_dir, model_type)\n",
-    "    model_dir=os.path.join(model_root, model_ver)\n",
-    "    return model_dir"
+    "class ModelDirs:\n",
+    "    def __init__(self, model_versions):\n",
+    "        self.dirs={}\n",
+    "        for ver in model_versions:\n",
+    "            dirs_for_ver={}\n",
+    "            for model_type in model_types:\n",
+    "                dir_path=os.path.join(models_dir, model_type, ver)\n",
+    "                attr_name=model_type\n",
+    "                dirs_for_ver[attr_name]=dir_path\n",
+    "            self.dirs[ver]=dirs_for_ver\n",
+    "    \n",
+    "model_dirs=ModelDirs(model_versions)"
    ]
   },
   {
@@ -125,11 +135,11 @@
    "source": [
     "# Set Stable Diffusion 1.5 Model Path\n",
     "\n",
-    "sd15_ckpt_dir=set_model_dir('checkpoints', 'sd15')\n",
-    "sd15_vae_dir=set_model_dir('vae', 'sd15')\n",
-    "sd15_lora_dir=set_model_dir('loras', 'sd15')\n",
-    "sd15_controlnet_dir=set_model_dir('controlnet', 'sd15')\n",
-    "sd15_embedding_dir=set_model_dir('embeddings', 'sd15')"
+    "sd15_ckpt_dir=model_dirs.dirs['sd15']['checkpoints']\n",
+    "sd15_vae_dir=model_dirs.dirs['sd15']['vae']\n",
+    "sd15_lora_dir=model_dirs.dirs['sd15']['loras']\n",
+    "sd15_controlnet_dir=model_dirs.dirs['sd15']['controlnet']\n",
+    "sd15_embedding_dir=model_dirs.dirs['sd15']['embeddings']"
    ]
   },
   {
@@ -856,8 +866,8 @@
    "source": [
     "# Set Stable Diffusion 2.x Model Path\n",
     "\n",
-    "sd2_ckpt_dir=set_model_dir('checkpoints', 'sd2')\n",
-    "sd2_controlnet_dir=set_model_dir('controlnet', 'sd2')"
+    "sd2_ckpt_dir=model_dirs.dirs['sd2']['checkpoints']\n",
+    "sd2_controlnet_dir=model_dirs.dirs['sd2']['controlnet']"
    ]
   },
   {
@@ -967,11 +977,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdxl_ckpt_dir=set_model_dir('checkpoints', 'sdxl')\n",
-    "sdxl_vae_dir=set_model_dir('vae', 'sdxl')\n",
-    "sdxl_lora_dir=set_model_dir('lora', 'sdxl')\n",
-    "sdxl_controlnet_dir=set_model_dir('controlnet', 'sdxl')\n",
-    "sdxl_embedding_dir=set_model_dir('embeddings', 'sdxl')"
+    "sdxl_ckpt_dir=model_dirs.dirs['sdxl']['checkpoints']\n",
+    "sdxl_vae_dir=model_dirs.dirs['sdxl']['vae']\n",
+    "sdxl_lora_dir=model_dirs.dirs['sdxl']['loras']\n",
+    "sdxl_controlnet_dir=model_dirs.dirs['sdxl']['controlnet']\n",
+    "sdxl_embedding_dir=model_dirs.dirs['sdxl']['embeddings']"
    ]
   },
   {
@@ -1613,9 +1623,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pony_ckpt_dir=set_model_dir('checkpoints', 'pony')\n",
-    "pony_vae_dir=set_model_dir('vae', 'pony')\n",
-    "pony_lora_dir=set_model_dir('loras', 'pony')"
+    "pony_ckpt_dir=model_dirs.dirs['pony']['checkpoints']\n",
+    "pony_vae_dir=model_dirs.dirs['pony']['vae']\n",
+    "pony_lora_dir=model_dirs.dirs['pony']['loras']"
    ]
   },
   {
@@ -1762,7 +1772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ilxi_ckpt_dir=set_model_dir('checkpoints', 'ilxl')"
+    "ilxi_ckpt_dir=model_dirs.dirs['ilxl']['checkpoints']"
    ]
   },
   {
@@ -1805,8 +1815,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd3_ckpt_dir=set_model_dir('checkpoints', 'sd3')\n",
-    "sd3_clip_dir=set_model_dir('clip', 'sd3')"
+    "sd3_ckpt_dir=model_dirs.dirs['sd3']['checkpoints']\n",
+    "sd3_clip_dir=model_dirs.dirs['sd3']['clip']"
    ]
   },
   {
@@ -1897,9 +1907,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flux_ckpt_dir=set_model_dir('checkpoints', 'flux1')\n",
-    "flux_vae_dir=set_model_dir('vae', 'flux1')\n",
-    "flux_lora_dir=set_model_dir('loras', 'flux1')"
+    "flux_ckpt_dir=model_dirs.dirs['flux1']['checkpoints']\n",
+    "flux_vae_dir=model_dirs.dirs['flux1']['vae']\n",
+    "flux_lora_dir=model_dirs.dirs['flux1']['loras']"
    ]
   },
   {
@@ -2026,16 +2036,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from requests import get\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "def git_download(repo_id: str, filename: str, tag: str, local_dir: str):\n",
+    "    repo_url=urljoin('https://github.com', repo_id, 'releases/download')\n",
+    "    src=urljoin(repo_url, tag, filename)\n",
+    "    filepath=os.path.join(local_dir, filename)\n",
+    "    download(src, filepath)\n",
+    "    return src, filepath\n",
     "\n",
     "def download(url, filename):\n",
     "    with open(filename, 'wb') as f:\n",
     "        response = get(url)\n",
-    "        f.write(response.content)"
+    "        f.write(response.content)\n",
+    "\n",
+    "realesrgan_dir=\"./models/upscale_models/RealESRGAN\""
    ]
   },
   {
@@ -2045,7 +2065,7 @@
    "outputs": [],
    "source": [
     "# Download RealESRGAN x4 Plus Model\n",
-    "download(\"https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth\", \"./models/upscale_models/RealESRGAN/RealESRGAN_x4plus.pth\")"
+    "git_download(repo_id='xinntao/Real-ESRGAN', filename='RealESRGAN_x4plus.pth', tag='v0.1.0', local_dir=realesrgan_dir)"
    ]
   },
   {
@@ -2055,7 +2075,7 @@
    "outputs": [],
    "source": [
     "# Download RealESRGAN x4 Plus Anime 6B Model\n",
-    "download(\"https://github.com/xinntao/Real-ESRGAN/releases/download/v0.2.2.4/RealESRGAN_x4plus_anime_6B.pth\", \"./models/upscale_models/RealESRGAN/RealESRGAN_x4plus_anime_6B.pth\")"
+    "git_download(repo_id=\"xinntao/Real-ESRGAN\", filename=\"RealESRGAN_x4plus_anime_6B.pth\", tag='v0.2.2.4', local_dir=realesrgan_dir)"
    ]
   },
   {
@@ -2107,7 +2127,7 @@
    "outputs": [],
    "source": [
     "# Download GFPGAN Model\n",
-    "download(\"https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/GFPGANv1.4.pth\", \"./models/facerestore_models/GFPGAN/GFPGANv1.4.pth\")"
+    "git_download(repo_id=\"TencentARC/GFPGAN\", filename=\"GFPGANv1.4.pth\", tag='v1.3.4', local_dir='./models/facerestore_models/GFPGAN')"
    ]
   },
   {
@@ -2117,7 +2137,7 @@
    "outputs": [],
    "source": [
     "# Download Code Former Model\n",
-    "download(\"https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/CodeFormer.pth\", \"./models/facerestore_models/Codeformer/CodeFormer.pth\")"
+    "git_download(repo_id=\"TencentARC/GFPGAN\", filename=\"CodeFormer.pth\", tag='v1.3.4', local_dir=\"./models/facerestore_models/Codeformer\")"
    ]
   },
   {
@@ -2127,7 +2147,7 @@
    "outputs": [],
    "source": [
     "# Download Restore Former Model\n",
-    "download(\"https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/RestoreFormer.pth\", \"./models/facerestore_models/Codeformer/RestoreFormer.pth\")"
+    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./facerestore_models/Codeformer')"
    ]
   },
   {
@@ -2214,8 +2234,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sams_dir='./models/sams'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download SAM HQ Vit H Model\n",
-    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_h.pth\", \"./models/sams/sam_hq_vit_h.pth\")"
+    "hf_hub_download(repo_id='lkeab/hq-sam', filename='sam_hq_vit_h.pth', local_dir=sams_dir)"
    ]
   },
   {
@@ -2225,7 +2254,7 @@
    "outputs": [],
    "source": [
     "# Download SAM HQ Vit L Model\n",
-    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_l.pth\", \"./models/sams/sam_hq_vit_l.pth\")"
+    "hf_hub_download(repo_id='lkeab/hq-sam', filename='sam_hq_vit_l.pth', local_dir=sams_dir)"
    ]
   },
   {
@@ -2235,7 +2264,7 @@
    "outputs": [],
    "source": [
     "# Download SAM HQ Vit B Model\n",
-    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_b.pth\", \"./models/sams/sam_hq_vit_b.pth\")"
+    "hf_hub_download(repo_id='lkeab/hq-sam', filename='sam_hq_vit_b.pth', local_dir=sams_dir)"
    ]
   },
   {
@@ -2245,7 +2274,7 @@
    "outputs": [],
    "source": [
     "# Download SAM HQ Vit Tiny Model\n",
-    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_tiny.pth\", \"./models/sams/sam_hq_vit_tiny.pth\")"
+    "hf_hub_download(repo_id='lkeab/hq-sam', filename='sam_hq_vit_tiny.pth', local_dir=sams_dir)"
    ]
   },
   {
