--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1832,6 +1832,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download Stable Diffusion 3 Medium Model\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3-medium\", filename=\"sd3_medium.safetensors\", local_dir=sd3_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Stable Diffusion 3.5 Medium Model\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-medium\", filename=\"sd3.5_medium.safetensors\", local_dir=sd3_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download Stable Diffusion 3.5 Large Model\n",
     "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"sd3.5_large.safetensors\", local_dir=sd3_ckpt_dir)"
    ]
@@ -2335,7 +2355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2349,7 +2369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
