--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -303,7 +303,7 @@
    "outputs": [],
    "source": [
     "# Install Civitai Downloader\n",
-    "!pip3 install git+https://github.com/bean980310/civitai-downloader.git"
+    "!pip3 install civitai-downloader"
    ]
   },
   {
@@ -449,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -463,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
