Update run_first.ipynb for civitai downloader install command

--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install civitai downloader"
+    "## Install CivitAI Model Downloader"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install civitai-downloader"
+    "!pip3 install civitai-model-downloader"
    ]
   },
   {
