--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1,5 +1,5 @@
 {
- "cells": [
+ "cells": [model_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_id
   {
    "cell_type": "markdown",
    "metadata": {},
