--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1,5 +1,5 @@
 {
- "cells": [model_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_idmodel_version_id
+ "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V3 Model\n",
-    "civitai_download(model_id=34373, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=34373, local_dir=sd15_ckpt_dir, token=token)"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V5 Model\n",
-    "civitai_download(model_id=30163, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=30163, local_dir=sd15_ckpt_dir, token=token)"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "# Download Anything Ink Model\n",
-    "civitai_download(model_id=90854, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=90854, local_dir=sd15_ckpt_dir, token=token)"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp32 fix Model\n",
-    "civitai_download(model_id=11745, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=11745, local_dir=sd15_ckpt_dir, token=token)"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp16 fix Model\n",
-    "civitai_download(model_id=11732, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=11732, local_dir=sd15_ckpt_dir, token=token)"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "# Download MeinaMix Model\n",
-    "civitai_download(model_id=948574, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=948574, local_dir=sd15_ckpt_dir, token=token)"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "outputs": [],
    "source": [
     "# Download Anything VAE\n",
-    "civitai_download(model_id=119279, local_dir=sd15_vae_dir, token=token)"
+    "civitai_download(model_version_id=119279, local_dir=sd15_vae_dir, token=token)"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "outputs": [],
    "source": [
     "# Download ClearVAE\n",
-    "civitai_download(model_id=88156, local_dir=sd15_vae_dir, token=token)"
+    "civitai_download(model_version_id=88156, local_dir=sd15_vae_dir, token=token)"
    ]
   },
   {
@@ -489,7 +489,7 @@
    "outputs": [],
    "source": [
     "# Download ShortBang Concept LoRA\n",
-    "civitai_download(model_id=122064, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=122064, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "outputs": [],
    "source": [
     "# Download Disembodied Head V2 LoRA\n",
-    "civitai_download(model_id=100482, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=100482, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -509,7 +509,7 @@
    "outputs": [],
    "source": [
     "# Download Dullahan LoRA\n",
-    "civitai_download(model_id=186885, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=186885, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -519,7 +519,7 @@
    "outputs": [],
    "source": [
     "# Download HeadinJar LoRA\n",
-    "civitai_download(model_id=77230, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=77230, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -529,7 +529,7 @@
    "outputs": [],
    "source": [
     "# Download Kirito LoRA\n",
-    "civitai_download(model_id=141405, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=141405, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -539,7 +539,7 @@
    "outputs": [],
    "source": [
     "# Download Eugeo LoRA\n",
-    "civitai_download(model_id=158391, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=158391, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -549,7 +549,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy LoRA\n",
-    "civitai_download(model_id=120588, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=120588, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -559,7 +559,7 @@
    "outputs": [],
    "source": [
     "# Download TomboyBuzzcut1-2-0805 LoRA\n",
-    "civitai_download(model_id=91509, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=91509, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -569,7 +569,7 @@
    "outputs": [],
    "source": [
     "# Download Princess Carry LoRA\n",
-    "civitai_download(model_id=112975, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=112975, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "outputs": [],
    "source": [
     "# Download Shima920 V2 LoRA\n",
-    "civitai_download(model_id=92833, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=92833, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "outputs": [],
    "source": [
     "# Download Anime Enhancer Midrange LoRA\n",
-    "civitai_download(model_id=215522, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=215522, local_dir=sd15_lora_dir, token=token)"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "outputs": [],
    "source": [
     "# Download bad-hand-v4\n",
-    "civitai_download(model_id=230261, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=230261, local_dir=sd15_embedding_dir, token=token)"
    ]
   },
   {
@@ -681,7 +681,7 @@
    "outputs": [],
    "source": [
     "# Download Deep Negative V1 75 T\n",
-    "civitai_download(model_id=5637, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=5637, local_dir=sd15_embedding_dir, token=token)"
    ]
   },
   {
@@ -691,7 +691,7 @@
    "outputs": [],
    "source": [
     "# Download veryBadImageNegative\n",
-    "civitai_download(model_id=25820, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=25820, local_dir=sd15_embedding_dir, token=token)"
    ]
   },
   {
@@ -701,7 +701,7 @@
    "outputs": [],
    "source": [
     "# Download GS-Boyish\n",
-    "civitai_download(model_id=95611, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=95611, local_dir=sd15_embedding_dir, token=token)"
    ]
   },
   {
@@ -1018,7 +1018,7 @@
    "outputs": [],
    "source": [
     "# Download Anything XL Model\n",
-    "civitai_download(model_id=384264, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=384264, local_dir=sdxl_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
    "outputs": [],
    "source": [
     "# Download Gamma XL NSFW for Anything XL Model\n",
-    "civitai_download(model_id=412021, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=412021, local_dir=sdxl_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1048,7 +1048,7 @@
    "outputs": [],
    "source": [
     "# Download Kohaku XL Epsilon Model\n",
-    "civitai_download(model_id=546178, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=546178, local_dir=sdxl_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1078,7 +1078,7 @@
    "outputs": [],
    "source": [
     "# Download NoobAI XL Model\n",
-    "civitai_download(model_id=968495, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=968495, local_dir=sdxl_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1166,7 +1166,7 @@
    "outputs": [],
    "source": [
     "# Download Envy Tomboy Slider XL LoRA\n",
-    "civitai_download(model_id=251963, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=251963, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1176,7 +1176,7 @@
    "outputs": [],
    "source": [
     "# Download SAO Kirito SDXL Satu LoRA\n",
-    "civitai_download(model_id=489270, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=489270, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1186,7 +1186,7 @@
    "outputs": [],
    "source": [
     "# Download XL Eugeo SAO Animagine XL 3.1 LoRA\n",
-    "civitai_download(model_id=437049, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=437049, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1196,7 +1196,7 @@
    "outputs": [],
    "source": [
     "# Download Sailorboy XL LoRA\n",
-    "civitai_download(model_id=134460, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=134460, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Disembodied head Headless LoRA\n",
-    "civitai_download(model_id=515553, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=515553, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1216,7 +1216,7 @@
    "outputs": [],
    "source": [
     "# Download [Yue] Paintingboys SDXL LoRA\n",
-    "civitai_download(model_id=144865, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=144865, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1226,7 +1226,7 @@
    "outputs": [],
    "source": [
     "# Download A Short cut v3 SDXL LoRA\n",
-    "civitai_download(model_id=298618, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=298618, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1236,7 +1236,7 @@
    "outputs": [],
    "source": [
     "# Download Breasts Slider LoRA\n",
-    "civitai_download(model_id=173866, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=173866, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1246,7 +1246,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Dark Knight LoRA\n",
-    "civitai_download(model_id=570644, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=570644, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1256,7 +1256,7 @@
    "outputs": [],
    "source": [
     "# Download Enhancer V4 XL LoRA\n",
-    "civitai_download(model_id=497695, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=497695, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1266,7 +1266,7 @@
    "outputs": [],
    "source": [
     "# Download Add Details XL LoRA\n",
-    "civitai_download(model_id=436121, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=436121, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1276,7 +1276,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Male Head on Female Body) Animagine XL 3.1 LoRA\n",
-    "civitai_download(model_id=513742, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=513742, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1286,7 +1286,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Female Head on Male Body) Animagine XL 3.1 LoRA\n",
-    "civitai_download(model_id=429832, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=429832, local_dir=sdxl_lora_dir, token=token)"
    ]
   },
   {
@@ -1354,7 +1354,7 @@
    "outputs": [],
    "source": [
     "# Download DeepNegative XL\n",
-    "civitai_download(model_id=454217, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=454217, local_dir=sdxl_embedding_dir, token=token)"
    ]
   },
   {
@@ -1364,7 +1364,7 @@
    "outputs": [],
    "source": [
     "# Download Negative XL\n",
-    "civitai_download(model_id=261856, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=261856, local_dir=sdxl_embedding_dir, token=token)"
    ]
   },
   {
@@ -1374,7 +1374,7 @@
    "outputs": [],
    "source": [
     "# Download Negative XL V2\n",
-    "civitai_download(model_id=264111, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=264111, local_dir=sdxl_embedding_dir, token=token)"
    ]
   },
   {
@@ -1384,7 +1384,7 @@
    "outputs": [],
    "source": [
     "# Download Negative XL Color_Balance_Calibration_0.8\n",
-    "civitai_download(model_id=431425, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=431425, local_dir=sdxl_embedding_dir, token=token)"
    ]
   },
   {
@@ -1642,7 +1642,7 @@
    "outputs": [],
    "source": [
     "# Download Pony Diffusion XL V6 Model\n",
-    "civitai_download(model_id=290640, local_dir=pony_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=290640, local_dir=pony_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1652,7 +1652,7 @@
    "outputs": [],
    "source": [
     "# Download AutismMix Pony Model\n",
-    "civitai_download(model_id=324619, local_dir=pony_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=324619, local_dir=pony_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1662,7 +1662,7 @@
    "outputs": [],
    "source": [
     "# Download 7th Anime XL Pony Model\n",
-    "civitai_download(model_id=441236, local_dir=pony_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=441236, local_dir=pony_ckpt_dir, token=token)"
    ]
   },
   {
@@ -1689,7 +1689,7 @@
    "outputs": [],
    "source": [
     "# Download Pony Standard VAE\n",
-    "civitai_download(model_id=739304, local_dir=pony_vae_dir, token=token)"
+    "civitai_download(model_version_id=739304, local_dir=pony_vae_dir, token=token)"
    ]
   },
   {
@@ -1699,7 +1699,7 @@
    "outputs": [],
    "source": [
     "# Download Pony Enhanced VAE Pastels\n",
-    "civitai_download(model_id=739267, local_dir=pony_vae_dir, token=token)"
+    "civitai_download(model_version_id=739267, local_dir=pony_vae_dir, token=token)"
    ]
   },
   {
@@ -1716,7 +1716,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Male Head on Female Body) Pony\n",
-    "civitai_download(model_id=528192, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=528192, local_dir=pony_lora_dir, token=token)"
    ]
   },
   {
@@ -1726,7 +1726,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Female Head on Male Body) Pony\n",
-    "civitai_download(model_id=528196, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=528196, local_dir=pony_lora_dir, token=token)"
    ]
   },
   {
@@ -1736,7 +1736,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Pony Headless\n",
-    "civitai_download(model_id=357744, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=357744, local_dir=pony_lora_dir, token=token)"
    ]
   },
   {
@@ -1746,7 +1746,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Pony Disembodied Head\n",
-    "civitai_download(model_id=360519, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=360519, local_dir=pony_lora_dir, token=token)"
    ]
   },
   {
@@ -1756,7 +1756,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy Style Pony\n",
-    "civitai_download(model_id=647477, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=647477, local_dir=pony_lora_dir, token=token)"
    ]
   },
   {
@@ -2010,7 +2010,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy for Flux LoRA\n",
-    "civitai_download(model_id=797322, local_dir=flux_lora_dir, token=token)"
+    "civitai_download(model_version_id=797322, local_dir=flux_lora_dir, token=token)"
    ]
   },
   {
