--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -286,9 +286,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from civitai_downloader.token.token import prompt_for_civitai_token\n",
+    "from civitai_downloader import login\n",
     "\n",
-    "prompt_for_civitai_token()"
+    "login()"
    ]
   },
   {
