--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configure Civitai API Key"
+    "## Login to CivitAI with API token"
    ]
   },
   {
@@ -80,13 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from civitai_downloader.token.token import prompt_for_civitai_token, get_token\n",
-    "from civitai_downloader.download.download import civitai_download, url_download\n",
+    "from civitai_downloader import login, civitai_download\n",
     "\n",
-    "token=get_token()\n",
-    "\n",
-    "if not token:\n",
-    "    token=prompt_for_civitai_token()"
+    "token=login()"
    ]
   },
   {
@@ -2355,7 +2351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2369,7 +2365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
